unpackaged/main/default/objects/zkfedex__Shipment__c/zkfedex__Shipment__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkfedex__shipmentHelp</customHelpPage>
    <description>FedEx Shipment is a collection of data that represents the details of the FedEx shipment.</description>
    <label>FedEx Shipment</label>
    <nameField>
        <displayFormat>Shipment-{0000000000}</displayFormat>
        <label>FedEx Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>