unpackaged/main/default/objects/zkfedex__Shipment__c/fields/Recipient_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Sales Order</label>
    <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
    <relationshipLabel>FedEx Shipments (Sales Order)</relationshipLabel>
    <relationshipName>FedEx_Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>