unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__ActualDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ActualDeliveryDate__c</fullName>
    <label>Actual Delivery Date</label>
    <type>Date</type>
</CustomField>