unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__Carrier__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>