unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__Currency__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Currency__c</fullName>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>