unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__DeliveredTo__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DeliveredTo__c</fullName>
    <label>Delivered To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>