unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DeliveryDate__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>