unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__DimensionUnits__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DimensionUnits__c</fullName>
    <label>Dimension Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
                <default>true</default>
                <label>IN</label>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>