unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__DocumentContentType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DocumentContentType__c</fullName>
    <label>Document Content Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>