unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__DropoffType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DropoffType__c</fullName>
    <description>Identifies the method by which the package is to be tendered to FedEx. This element does not dispatch a courier for package pickup if "schedule a pickup" is selected.</description>
    <inlineHelpText>Identifies the method by which the package is to be tendered to FedEx. This element does not dispatch a courier for package pickup if "schedule a pickup" is selected.</inlineHelpText>
    <label>Dropoff Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>