unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__DutiesPayorAccountCountry__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DutiesPayorAccountCountry__c</fullName>
    <label>Duties Payor Account Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>