unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__EMailRecipient1__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EMailRecipient1__c</fullName>
    <label>Email Recipient 1</label>
    <type>Email</type>
</CustomField>