unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__EMailRecipient2__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EMailRecipient2__c</fullName>
    <label>Email Recipient 2</label>
    <type>Email</type>
</CustomField>