unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__EMailRecipient3__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EMailRecipient3__c</fullName>
    <label>Email Recipient 3</label>
    <type>Email</type>
</CustomField>