unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__FreightBookingConfNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__FreightBookingConfNumber__c</fullName>
    <label>Freight Booking Confirmation Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>