unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__FreightPackingListEnclosed__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__FreightPackingListEnclosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Packing List Enclosed</label>
    <type>Checkbox</type>
</CustomField>