unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__IneligibleForMoneyBackGuarantee__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IneligibleForMoneyBackGuarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ineligible for Money Back Guarantee</label>
    <type>Checkbox</type>
</CustomField>