unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__LastTrackUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__LastTrackUpdateTime__c</fullName>
    <label>Last Track Update Time</label>
    <type>DateTime</type>
</CustomField>