unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__MasterTrackingId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__MasterTrackingId__c</fullName>
    <label>Master Tracking Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>