unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PaymentType__c</fullName>
    <description>SENDER is Your Account
RECIPIENT is the other party involved in the shipment
THIRD PARTY is a party not involved in the shipment</description>
    <inlineHelpText>SENDER is Your Account
RECIPIENT is the other party involved in the shipment
THIRD PARTY is a party not involved in the shipment</inlineHelpText>
    <label>Payment Type</label>
    <length>12</length>
    <type>Text</type>
</CustomField>