unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__Pickup__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Pickup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FedEx Pickup</label>
    <referenceTo>zkfedex__Pickup__c</referenceTo>
    <relationshipLabel>FedEx Shipments</relationshipLabel>
    <relationshipName>FedEx_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>