unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientBrazilianTaxIdType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientBrazilianTaxIdType__c</fullName>
    <description>Specifies how the recipient is identified for customs purposes; the requirements on this information vary with destination country.</description>
    <inlineHelpText>Specifies how the recipient is identified for customs purposes; the requirements on this information vary with destination country.</inlineHelpText>
    <label>Recipient Customs ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COMPANY</fullName>
            </value>
            <value>
                <fullName>INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>PASSPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>