unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientCity__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientCity__c</fullName>
    <label>Recipient City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>