unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientCompany__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientCompany__c</fullName>
    <label>Recipient Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>