unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientContact__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>