unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientEMail__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientEMail__c</fullName>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>