unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientIsResidential__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientIsResidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient Address is Residential</label>
    <type>Checkbox</type>
</CustomField>