unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientName__c</fullName>
    <label>Recipient Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>