unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientOpportunity__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>