unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientState__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientState__c</fullName>
    <label>Recipient State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>