unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientTaxId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientTaxId__c</fullName>
    <label>Recipient Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>