unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__RecipientTaxIdType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RecipientTaxIdType__c</fullName>
    <label>Recipient Tax ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>Business National</fullName>
            </value>
            <value>
                <fullName>Business State</fullName>
            </value>
            <value>
                <fullName>Business Union</fullName>
            </value>
            <value>
                <fullName>Personal National</fullName>
            </value>
            <value>
                <fullName>Personal State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>