unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__ReferenceInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferenceInvoiceNumber__c</fullName>
    <label>Reference - Invoice Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>