unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__ReferenceRmaNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferenceRmaNumber__c</fullName>
    <label>Reference - RMA Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>