unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__SenderEMail__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderEMail__c</fullName>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>