unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__SenderPhone__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderPhone__c</fullName>
    <label>Sender Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>