unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__SenderStreet__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderStreet__c</fullName>
    <label>Sender Street</label>
    <type>TextArea</type>
</CustomField>