unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__SenderTaxId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SenderTaxId__c</fullName>
    <label>Sender Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>