unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__ServiceType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ServiceType__c</fullName>
    <label>Service Type</label>
    <length>35</length>
    <type>Text</type>
</CustomField>