unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__ServiceTypeName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ServiceTypeName__c</fullName>
    <label>Service Type Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>