unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__ShipDate__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShipDate__c</fullName>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>