unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__ShipmatePreference__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShipmatePreference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipmate Preference</label>
    <referenceTo>zkfedex__ShipmatePreference__c</referenceTo>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>