unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__ShipmentNotes__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShipmentNotes__c</fullName>
    <label>Shipment Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>