unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__ShipmentProcessingCompleted__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShipmentProcessingCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Shipmate was able to successfully complete the shipment processing with the shipping carrier.</description>
    <inlineHelpText>Indicates whether Shipmate was able to successfully complete the shipment processing with the shipping carrier.</inlineHelpText>
    <label>Shipment Processing Completed</label>
    <type>Checkbox</type>
</CustomField>