unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__ShipmentType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShipmentType__c</fullName>
    <label>Shipment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>