unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__SsProcessReturnShipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsProcessReturnShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Shipment</label>
    <type>Checkbox</type>
</CustomField>