unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__TotalBaseCharge__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TotalBaseCharge__c</fullName>
    <label>Total Base Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>