unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__TotalNetCharge__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TotalNetCharge__c</fullName>
    <label>Total Net Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>