unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__TotalSurchargeDescriptions__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TotalSurchargeDescriptions__c</fullName>
    <label>Total Surcharge Descriptions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>