unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__TotalSurcharges__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TotalSurcharges__c</fullName>
    <label>Total Surcharges</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>