unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__TotalTaxes__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TotalTaxes__c</fullName>
    <label>Total Taxes</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>