unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__UserAllowedEditOfRecipientInfo__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__UserAllowedEditOfRecipientInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Shipmate user selected "Allow Edit" when creating this shipment. This allowed the user to change the recipient address data from the recipient address data obtained from the associated address source objects (Account, Contact, Lead, or Opportunity).</description>
    <inlineHelpText>The Shipmate user selected "Allow Edit" when creating this shipment. This allowed the user to change the recipient address data from the recipient address data obtained from the associated address source objects (Account, Contact, Lead, or Opportunity).</inlineHelpText>
    <label>User Allowed Edit of Recipient Info</label>
    <type>Checkbox</type>
</CustomField>