unpackaged/main/default/objects/zkfedex__Shipment__c/fields/zkfedex__WeightUnits__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__WeightUnits__c</fullName>
    <label>Weight Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LB</fullName>
                <default>true</default>
                <label>LB</label>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>