unpackaged/main/default/objects/zkfedex__Shipment__c/listViews/zkfedex__All2.listView-meta.xml
<ListView>
    <fullName>zkfedex__All2</fullName>
    <columns>NAME</columns>
    <columns>zkfedex__ShipmentDeleted__c</columns>
    <columns>zkfedex__SsProcessReturnShipment__c</columns>
    <columns>zkfedex__Delivered__c</columns>
    <columns>zkfedex__LabelImageType__c</columns>
    <columns>zkfedex__ShipmentNotes__c</columns>
    <columns>zkfedex__ShipDate__c</columns>
    <columns>zkfedex__ServiceTypeName__c</columns>
    <columns>zkfedex__RecipientName__c</columns>
    <columns>zkfedex__RecipientLead__c</columns>
    <columns>zkfedex__RecipientContact__c</columns>
    <columns>zkfedex__RecipientAccount__c</columns>
    <columns>zkfedex__RecipientOpportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>