unpackaged/main/default/objects/zkfedex__Shipment__c/listViews/zkfedex__Thermal_Labels.listView-meta.xml
<ListView>
    <fullName>zkfedex__Thermal_Labels</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>zkfedex__ShipDate__c</columns>
    <columns>zkfedex__LabelImageType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>zkfedex__LabelImageType__c</field>
        <operation>equals</operation>
        <value>Thermal 4x6 - Zebra</value>
    </filters>
    <filters>
        <field>zkfedex__LabelImageType__c</field>
        <operation>equals</operation>
        <value>Thermal 4x6 - Eltron</value>
    </filters>
    <label>Thermal Labels</label>
</ListView>