unpackaged/main/default/objects/zkfedex__Shipment__c/listViews/zkfedex__Tracking.listView-meta.xml
<ListView>
    <fullName>zkfedex__Tracking</fullName>
    <columns>NAME</columns>
    <columns>zkfedex__SsProcessReturnShipment__c</columns>
    <columns>zkfedex__ShipDate__c</columns>
    <columns>zkfedex__MasterTrackingId__c</columns>
    <columns>zkfedex__LastTrackUpdateTime__c</columns>
    <columns>zkfedex__ShipmentDeleted__c</columns>
    <columns>zkfedex__Delivered__c</columns>
    <columns>zkfedex__StatusDescription__c</columns>
    <columns>zkfedex__ActualDeliveryDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tracking</label>
</ListView>